--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <h4>Categories</h4>
         </nav>
         <div class="dropdown">
-          <button id="myBtn" class="dropbtn"><img src="/assets/images/icon-menu.svg" alt=""></button>
+          <button id="myBtn" class="dropbtn"><img src="assets/images/icon-menu.svg" alt=""></button>
           <div id="myDropdown" class="dropdown-content">
             <h4>Home</h4>
             <h4>New</h4>
@@ -39,7 +39,7 @@
       </header>
       <main class="main-items">
         <section class="section-1">
-          <img src="/assets/images/image-web-3-desktop.jpg" alt="" />
+          <img src="assets/images/image-web-3-desktop.jpg" alt="" />
           <div>
             <p class="title">The Bright Future of Web 3.0?</p>
             <p class="Dark-grayish-blue">
@@ -74,7 +74,7 @@
           </div>
         </section>
         <section class="section-3">
-          <img src="/assets/images/image-retro-pcs.jpg" alt="" />
+          <img src="assets/images/image-retro-pcs.jpg" alt="" />
           <div>
             <p class="number">01</p>
             <p class="sub-title">Reviving Retro PCs</p>
@@ -84,7 +84,7 @@
           </div>
         </section>
         <section class="section-4">
-          <img src="/assets/images/image-top-laptops.jpg" alt="" />
+          <img src="assets/images/image-top-laptops.jpg" alt="" />
           <div>
             <p class="number">02</p>
             <p class="sub-title">Top 10 Laptops of 2022</p>
@@ -94,7 +94,7 @@
           </div>
         </section>
         <section class="section-5">
-          <img src="/assets/images/image-gaming-growth.jpg" alt="" />
+          <img src="assets/images/image-gaming-growth.jpg" alt="" />
           <div>
             <p class="number">03</p>
             <p class="sub-title">The Growth of Gaming</p>
